--- a/02_IntroductionToDjango/board/main/templates/main/main00.html
+++ b/02_IntroductionToDjango/board/main/templates/main/main00.html
@@ -62,22 +62,20 @@
   font-size: 20px;
 }
 </style>
+
+  <title>{{title}}</title>
 </head>
 <body>
 
 <ul class="navigation">
-  <li><a href="{% url 'advertisement01' %}">Python-фреймворк Django</a></li>
-  <li><a href="{% url 'advertisement02' %}">Веб-верстка «Базовый уровень»</a></li>
-  <li><a href="{% url 'advertisement03' %}">Система контроля версий Git</a></li>
-  <li><a href="{% url 'advertisement04' %}">Профессия Python-разработчик</a></li>
-  <li><a href="{% url 'advertisement05' %}">Профессия Fullstack-разработчик на Python</a></li>
+  <li><a href="{% url 'contacts' %}">Контакты</a></li>
   <li><a href="{% url 'about' %}">About</a></li>
 </ul>
 
 <div class="flex-container">
   <div>
     <h4>
-      “Прошел все курсы на SkillBox. Продаю готовые домашние задания"
+      “4.7 Практическая работа"
     </h4>
   </div>
 </div>
