--- a/M_09_permissions/mysite/shopapp/templates/shopapp/products-list.html
+++ b/M_09_permissions/mysite/shopapp/templates/shopapp/products-list.html
@@ -23,8 +23,14 @@
     <h3>No products yet</h3>
   {% endif %}
 
-  <div>
-    <a href="{% url 'shopapp:product_create' %}"
-      >Create a new product</a>
-  </div>
+
+  {% if perms.shopapp.add_product %}
+    <div>
+      <a href="{% url 'shopapp:product_create' %}"
+        >Create a new product</a>
+    </div>
+  {% else %}
+    <p><b> You don't have permission to add a product </b> </p>
+{% endif %}
+
 {% endblock %}
