--- a/M_09_permissions/mysite/shopapp/templates/shopapp/products-details.html
+++ b/M_09_permissions/mysite/shopapp/templates/shopapp/products-details.html
@@ -10,8 +10,12 @@
     <div>Description: <em>{{ product.description }}</em></div>
     <div>Price: {{ product.price }}</div>
     <div>Discount: {{ product.discount }}</div>
+    <br>
+    <div>Created by: {{ product.created_by }}</div>
+    <br>
     <div>Archived: {{ product.archived }}</div>
   </div>
+  <br>
   <div>
     <a href="{% url 'shopapp:product_update' pk=product.pk %}">Update product</a>
   </div>
