--- a/M_11_Files/mysite/shopapp/templates/shopapp/products-details.html
+++ b/M_11_Files/mysite/shopapp/templates/shopapp/products-details.html
@@ -11,6 +11,21 @@
     <div>Price: {{ product.price }}</div>
     <div>Discount: {{ product.discount }}</div>
     <div>Archived: {{ product.archived }}</div>
+    {% if product.preview %}
+      <img src="{{ product.preview.url }}" alt="{{ product.preview.name }}">
+    {% endif %}
+
+    <h3>Images:</h3>
+    <div>
+      {% for img in product.images.all %}
+      <div>
+        <img src="{{ img.image.url }}" alt="{{ img.image.name }}">
+        <div> {{ img.description }}</div>
+      </div>
+      {% empty %}
+        <div>No image uploaded yet</div>
+      {% endfor %}
+    </div>
   </div>
   <div>
     <a href="{% url 'shopapp:product_update' pk=product.pk %}">Update product</a>
